[gd_scene load_steps=8 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://Bullet.tscn" type="PackedScene" id=2]
[ext_resource path="res://art/onlyObjects_retina_rotated.png" type="Texture" id=3]
[ext_resource path="res://32x32.png" type="Texture" id=5]
[ext_resource path="res://Camera2D.gd" type="Script" id=6]
[ext_resource path="res://Chain.tscn" type="PackedScene" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 24.0234, 37.6377 )

[node name="Player" type="KinematicBody2D" groups=[
"ChainGang",
]]
position = Vector2( 2.89905, -3.43567 )
rotation = -0.000230981
collision_layer = 4
collision_mask = 5
collision/safe_margin = 0.001
script = ExtResource( 1 )
Bullet = ExtResource( 2 )
rot_speed = 1
damage = 10
start_health = 100
bullet_lifetime = 0.4

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -4.54001, 3.22983 )
scale = Vector2( 23.3081, 18.8213 )
texture = ExtResource( 5 )
region_enabled = true
region_rect = Rect2( 50, 97, 2, 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -3.84326, 4.41504 )
shape = SubResource( 1 )

[node name="Turret" type="Sprite" parent="."]
position = Vector2( 20, 0 )
scale = Vector2( 0.700347, 0.738675 )
texture = ExtResource( 3 )
offset = Vector2( 23, 0 )
region_enabled = true
region_rect = Rect2( 199, 36, 60, 24 )

[node name="Muzzle" type="Position2D" parent="Turret"]
position = Vector2( 65, 0 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 2, 2 )
script = ExtResource( 6 )

[node name="Bullets" type="Node" parent="."]

[node name="GunTimer" type="Timer" parent="."]
wait_time = 0.01

[node name="RayCast2D" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 5000, 0 )
collide_with_areas = true

[node name="Wall_Detect_Right" type="RayCast2D" parent="."]
position = Vector2( 21.4546, -31.2942 )
rotation = -1.58225
enabled = true
cast_to = Vector2( 0, 30 )
collision_mask = 5
collide_with_areas = true

[node name="Wall_Detect_Right2" type="RayCast2D" parent="."]
position = Vector2( 25.6651, -196.556 )
rotation = -1.58225
enabled = true
cast_to = Vector2( 0, 30 )
collision_mask = 5
collide_with_areas = true

[node name="Wall_Detect_Left" type="RayCast2D" parent="."]
position = Vector2( -29.8931, -30.137 )
rotation = 1.57469
enabled = true
cast_to = Vector2( 0, 30 )
collision_mask = 5
collide_with_areas = true

[node name="Wall_Detect_Left2" type="RayCast2D" parent="."]
position = Vector2( -38.3141, -197.505 )
rotation = 1.57469
enabled = true
cast_to = Vector2( 0, 30 )
collision_mask = 5
collide_with_areas = true

[node name="GunTimer" type="Timer" parent="."]
wait_time = 0.01

[node name="SlideTimer" type="Timer" parent="."]

[node name="GrappleTimer" type="Timer" parent="."]
process_mode = 0

[node name="Chain" parent="." groups=[
"ChainGang",
] instance=ExtResource( 7 )]
position = Vector2( 4.96469, -19.3649 )
scale = Vector2( 1.36203, 1.23864 )
[connection signal="timeout" from="GunTimer" to="." method="_on_GunTimer_timeout"]
[connection signal="timeout" from="SlideTimer" to="." method="_on_SlideTimer_timeout"]
[connection signal="timeout" from="GrappleTimer" to="." method="_on_GrappleTimer_timeout"]
